--- a/css/styles.css
+++ b/css/styles.css
@@ -12,12 +12,11 @@ body {
 
 .header {
   width: 100%;
-  background-color: #1E3A8A; /* Dark blue */
-  color: yellow;
   display: flex;
   align-items: center;
   padding: 10px;
   box-sizing: border-box;
+  background-color: #1E3A8A; /* Dark blue background */
 }
 
 .menu-icon {
@@ -40,8 +39,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: yellow;
   font-size: 1.2em;
   font-weight: bold;
+  text-align: center;
 }
 
 .container {
