--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 
 /* Root Variables for Easy Manipulation */
 :root {
+ --version-number: "v1.0"; /* Set the version number here */
   --chip-margin: 5px; /* Adjust this value to change the spacing between chips */
   --dark-blue: #1E3A8A;
   --white: #FFFFFF;
@@ -15,6 +16,7 @@
   --button-text-color: #FFFFFF;
   --chip-size: 70px; /* Set the consistent size for all chips */
   --app-title-size: 1.6em; /* Adjust this value to change the size of the app title */
+ 
 }
 
 /* Utility Classes for Font and Spacing */
@@ -193,6 +195,7 @@ input {
   display: flex;
   justify-content: space-between;
   margin: var(--button-spacing) var(--button-spacing) 0 var(--button-spacing);
+  position: relative;
 }
 
 .button-players {
@@ -205,6 +208,17 @@ input {
   cursor: pointer;
   text-align: center;
   margin: 0 var(--button-spacing);
+  font-weight: bold;
+}
+
+.version-number {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  color: var(--dark-blue);
+  background-color: var(--white);
+  padding: 0 10px;
+  font-size: 1em;
   font-weight: bold;
 }
 
